@@ -1,9 +1,7 @@
 package brussels.digitalcity.maxdolmans.demorest.utils;
 
-import brussels.digitalcity.maxdolmans.demorest.models.forms.AddressForm;
-import brussels.digitalcity.maxdolmans.demorest.models.forms.BookingForm;
-import brussels.digitalcity.maxdolmans.demorest.models.forms.ChildInsertForm;
-import brussels.digitalcity.maxdolmans.demorest.models.forms.GuardianForm;
+import brussels.digitalcity.maxdolmans.demorest.models.forms.*;
+import brussels.digitalcity.maxdolmans.demorest.services.AppUserService;
 import brussels.digitalcity.maxdolmans.demorest.services.BookingService;
 import brussels.digitalcity.maxdolmans.demorest.services.ChildService;
 import brussels.digitalcity.maxdolmans.demorest.services.GuardianService;
@@ -11,9 +9,7 @@ import org.springframework.beans.factory.InitializingBean;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
-import java.time.LocalDateTime;
 import java.time.LocalTime;
-import java.util.Arrays;
 import java.util.List;
 
 @Service
@@ -22,15 +18,17 @@ public class DataInit implements InitializingBean {
     private final ChildService childService;
     private final GuardianService guardianService;
     private final BookingService bookingService;
+    private final AppUserService userService;
 
-    public DataInit(ChildService childService, GuardianService guardianService, BookingService bookingService) {
+    public DataInit(ChildService childService, GuardianService guardianService, BookingService bookingService, AppUserService userService) {
         this.childService = childService;
         this.guardianService = guardianService;
         this.bookingService = bookingService;
+        this.userService = userService;
     }
 
 
-    private final List<ChildInsertForm> children = Arrays.asList(
+    private final List<ChildInsertForm> children = List.of(
             new ChildInsertForm(
                     "Max",
                     "Dolmans",
@@ -45,7 +43,7 @@ public class DataInit implements InitializingBean {
             )
     );
 
-    private final List<GuardianForm> guardians = Arrays.asList(
+    private final List<GuardianForm> guardians = List.of(
             new GuardianForm(
                     "Christine",
                     "Herinckx",
@@ -61,7 +59,7 @@ public class DataInit implements InitializingBean {
             )
     );
 
-    private final List <BookingForm> bookings = Arrays.asList(
+    private final List<BookingForm> bookings = List.of(
             new BookingForm(
                     LocalDate.of(2022, 8, 30),
                     LocalTime.of(9, 15),
@@ -72,12 +70,20 @@ public class DataInit implements InitializingBean {
             )
     );
 
+    private final List<AppUserCreateForm> users = List.of(
+            new AppUserCreateForm(
+                    "Frodo",
+                    "My precious!"
+            )
+    );
+
     @Override
     public void afterPropertiesSet() throws Exception {
         try {
             children.forEach(childService::create);
             guardians.forEach(guardianService::create);
             bookings.forEach(bookingService::create);
+            users.forEach(userService::create);
         } catch (IllegalArgumentException ex) {
             System.out.println(ex.getMessage());
         }
